# Android-Agent

./: PROJECT_SETUP.md  README.md  USER_ACTIONS.md  codemagic.yaml  gradlew  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/androidagent/: AgentApplication.kt
app/src/main/java/com/androidagent/data/accessibility/: AgentAccessibilityService.kt
app/src/main/java/com/androidagent/data/action/: ActionEngine.kt
app/src/main/java/com/androidagent/data/agent/: AgentLoop.kt  PlanningEngine.kt
app/src/main/java/com/androidagent/data/capture/: CaptureActivity.kt  CaptureForegroundService.kt  ScreenCaptureManager.kt
app/src/main/java/com/androidagent/data/llm/: LlamaCppEngine.kt  LlmRepositoryImpl.kt  ModelManager.kt  PromptBuilder.kt  ToolCallParser.kt
app/src/main/java/com/androidagent/data/logging/: AgentLogger.kt
app/src/main/java/com/androidagent/data/memory/: MemoryDatabase.kt  MemoryRepositoryImpl.kt
app/src/main/java/com/androidagent/data/ocr/: LocalOcrEngine.kt
app/src/main/java/com/androidagent/data/perception/: UnifiedPerceptionEngine.kt
app/src/main/java/com/androidagent/data/safety/: SafetyEngine.kt
app/src/main/java/com/androidagent/di/: AppModule.kt
app/src/main/res/drawable/: ic_agent_notification.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
gradle/: libs.versions.toml
(+45 files in other folders)
